# sparv

./: .gitignore  .markdownlint.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: mkdocs.yml  sync_doc.sh
docs/developers-guide/: config-parameters.md  general-concepts.md  intro.md  sparv-classes.md  sparv-decorators.md  utilities.md  wildcards.md  writing-sparv-plugins.md
docs/md2pdf/: filter.py  make_pdf.sh  preprocess_html.py  settings_template.tex
docs/mkdocs/: index.md
docs/mkdocs/overrides/: home.html
docs/mkdocs/overrides/partials/: toc-item.html
docs/mkdocs/stylesheets/: extra.css
docs/user-manual/: available-analyses.md  cli.md  concepts.md  corpus-configuration.md  installation-and-setup.md  intro.md  preparing-your-corpus.md  quick-start.md  requirements-for-source-files.md  running-sparv.md  using-sparv-as-a-library.md
sparv/: __init__.py  __main__.py
sparv/api/: __init__.py  classes.py
sparv/api/util/: constants.py  export.py  install.py  misc.py  mysql_wrapper.py  system.py
sparv/api/util/tagsets/: __init__.py  pos_to_upos.py  suc_to_feats.py  tagmappings.py
sparv/core/: Snakefile  __init__.py  config.py  console.py  health_check.py  io.py  log_handler.py  log_plugin.py  misc.py  paths.py  plugins.py  preload.py  registry.py  run.py  run_snake.py  schema.py  setup.py  snake_prints.py  snake_utils.py  wizard.py
sparv/core_modules/export/: __init__.py
sparv/core_modules/import/: __init__.py
sparv/core_modules/metadata/: __init__.py
sparv/core_modules/sparv/: __init__.py
sparv/modules/conll_export/: conllu.py  metadata.yaml
sparv/modules/csv_export/: csv_export.py
sparv/modules/cwb/: __init__.py  cwb.py  info.py  install_corpus.py
sparv/modules/dateformat/: dateformat.py
sparv/modules/docx_import/: docx_import.py
sparv/modules/geo/: geo.py  metadata.yaml
sparv/modules/hist/: __init__.py  diapivot.py  hist.py  models.py
sparv/modules/hunpos/: __init__.py  hunpos.py  metadata.yaml  morphtable.py  morphtable_hist.py
sparv/modules/korp/: __init__.py  config.py  lemgram_index.py  timespan.py  wordpicture.py
sparv/modules/lexical_classes/: metadata.yaml  models.py  text.py  token.py
sparv/modules/malt/: malt.py  metadata.yaml
sparv/modules/misc/: ids.py  misc.py  number.py
sparv/modules/odt_import/: odt_import.py
sparv/modules/pdf_import/: pdf_import.py
sparv/modules/phrase_structure/: metadata.yaml  phrase_structure.py
sparv/modules/readability/: metadata.yaml  readability.py
sparv/modules/saldo/: compound.py  metadata.yaml  nst_comp_model.py  saldo.py  saldo_model.py  stats_model.py
sparv/modules/segment/: metadata.yaml  segment.py
sparv/modules/sensaldo/: metadata.yaml  sensaldo.py
sparv/modules/sent_align/: sent_align.py
sparv/modules/stanford/: stanford.py
sparv/modules/stanza/: __init__.py  metadata.yaml  models.py  stanza.py  stanza_swe.py  stanza_utils.py
sparv/modules/stats_export/: __init__.py  sbx_stats.py  stats_export.py  utils.py
sparv/modules/swener/: metadata.yaml  swener.py
sparv/modules/text_import/: text_import.py
sparv/modules/treetagger/: treetagger.py
sparv/modules/version_info/: version_info.py
sparv/modules/word_align/: word_align.py
sparv/modules/wsd/: metadata.yaml  wsd.py
sparv/modules/xml_export/: __init__.py  metadata.yaml  preserved_format.py  pretty.py  scrambled.py  xml_utils.py
sparv/modules/xml_import/: xml_import.py
sparv/resources/config/: config_default.yaml
tests/: __init__.py  test_annotations.py  utils.py
tests/test_corpora/freeling-fra-txt/: config.yaml
tests/test_corpora/standard-swe/: convert.py
tests/test_corpora/standard-swe/gold_export/conll_export/: rävar.conllu
tests/test_corpora/standard-swe/gold_export/csv_export/: rävar.csv
tests/test_corpora/standard-swe/gold_export/cwb.vrt/: rävar.vrt
tests/test_corpora/swe-1800/gold_export/cwb.vrt/: boaorm.vrt
tests/unit/: test_config.py  test_language_registry.py
(+20 files in other folders)
